--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@react-navigation/drawer": "^6.1.8",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/stack": "^6.0.11",
+    "@reduxjs/toolkit": "^1.6.2",
+    "@types/react-redux": "^7.1.19",
     "axios": "^0.23.0",
     "formik": "^2.2.9",
     "react": "17.0.2",
     "react-native": "0.66.1",
+    "react-native-encrypted-storage": "^4.0.2",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-paper": "^4.9.2",
     "react-native-reanimated": "^2.2.3",
@@ -24,6 +27,9 @@
     "react-native-screens": "^3.8.0",
     "react-native-splash-screen": "^3.2.0",
     "react-native-vector-icons": "^8.1.0",
+    "react-redux": "^7.2.5",
+    "redux": "^4.1.1",
+    "redux-thunk": "^2.3.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
