--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/cookies": "^5.0.1",
     "@react-navigation/drawer": "^6.1.8",
     "@react-navigation/native": "^6.0.6",
+    "@react-navigation/native-stack": "^6.2.5",
     "@react-navigation/stack": "^6.0.11",
     "@reduxjs/toolkit": "^1.6.2",
     "@types/react-redux": "^7.1.19",
