--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-redux": "^7.1.19",
     "axios": "^0.23.0",
     "formik": "^2.2.9",
+    "moment": "^2.29.1",
     "react": "17.0.2",
     "react-native": "0.66.1",
     "react-native-encrypted-storage": "^4.0.2",
