--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "moment": "^2.29.1",
     "react": "17.0.2",
     "react-native": "0.66.1",
+    "react-native-dotenv": "^3.3.0",
     "react-native-encrypted-storage": "^4.0.2",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-instagram-login": "^2.0.5",
@@ -44,6 +45,7 @@
     "@react-native-community/eslint-config": "^2.0.0",
     "@types/jest": "^26.0.23",
     "@types/react-native": "^0.63.0",
+    "@types/react-native-dotenv": "^0.2.0",
     "@types/react-native-vector-icons": "^6.4.10",
     "@types/react-test-renderer": "^17.0.1",
     "babel-jest": "^26.6.3",
